[gd_scene load_steps=2 format=3 uid="uid://onbdjn147cjf"]

[ext_resource type="Script" uid="uid://cbl5lhfjgg860" path="res://improvement_card.gd" id="1_6uwhp"]

[node name="ImprovementCard" type="Node2D"]
script = ExtResource("1_6uwhp")

[node name="EventDescription" type="RichTextLabel" parent="."]
offset_left = 3.0
offset_top = 6.0
offset_right = 401.0
offset_bottom = 154.0
theme_override_font_sizes/normal_font_size = 17
text = "At 12:00PM, you felt neutral due to \"reasoning\". What might you do to self improve on this situation?"
scroll_active = false

[node name="ReflectionResponseBox" type="TextEdit" parent="."]
offset_left = 3.0
offset_top = 164.0
offset_right = 402.0
offset_bottom = 238.0

[node name="SubmitButton" type="Button" parent="."]
offset_left = 110.0
offset_top = 246.0
offset_right = 281.0
offset_bottom = 308.0
theme_override_font_sizes/font_size = 35
text = "Submit"

[connection signal="pressed" from="SubmitButton" to="." method="_on_submit_button_pressed"]
